MOnggoDB Create Read

--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "name": "praxis-academy",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "author": "vicri",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "moment": "^2.24.0",
+    "mongoose": "^5.7.11",
     "nodemon": "^1.19.4"
   }
 }
